# jolymer

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
examples/: chi2_from_spectra.py
scripts/: smooth-saxs-curve.sh
src/jolymer/: '  3  Measurement.py  Sample.py  \  database_creation.sql  database_operations.py  jocolors.py  jostyle.mplstyle  originlab.py  os_utility.py  plot_utility.py  pptx_utility.py  pymol_utility.py  sasview_utility.py  tresy_samples.py
src/jolymer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/jolymer/dls/: CONTINwrapper.py  __init__.py  contin  contin.py  contin_12_12.04.2021,_094240.py  cun.py  dls_plotlib.py  dlsmodel.py  kww.py  lsi.py  lsi3d.py  lsis.py  phidls.py  qplot.py  repes_utility.py  test.py
src/jolymer/dsc/: mettler.py
src/jolymer/jolib.egg-info/: PKG-INFO
src/jolymer/jolymer.egg-info/: PKG-INFO
src/jolymer/joscatter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/jolymer/pptx_templates/: TUM_Standard.pptx
src/jolymer/samples/: bioMOLECULE.py
src/jolymer/sas/: CoupledMeasurement.py  Debye.py  Experiment.py  GROMACS_SWAXS.py  REPLICA_SWAXS.py  SAXS_Measurement.py  SAXS_Model.py  atsas_utility.py  beaucage.py  bioREGALS.py  biosaxs13A9M.py  dab.py  desy.py  double_beaucage.py  ellipsoid.py  ganesha.py  gauss_lorentz_gel.py  gaussian_peak.py  guinierPorod.py  models.py  ms.py  ornsteinZernike.py  sas_plotlib.py  sphere.py  tps13a.py  tresy.py  triple_beaucage.py  tryscan.py
src/jolymer/sas_models/: __init__.py  jbeaucage.py  ornsteinZernike.py
src/jolymer/uv/: onlineUV.py
(+12 files in other folders)
