[metadata]
name = joscatter
version = 0.0.1
author = Johannes Allwang
author_email = johannes@it-allwang.de
description = Package for data analysis
long_description = file: README.md
long_description_content_type = text/markdown
# url = www.internet.com
# project_urls = 
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = jolymer
packages = find:
python_requires = >=3.8

[options.packages.find]
where = jolymer
